bugfix/etsl-647 fixed tablet and mobile alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/smiles-page.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/smiles-page.scss
@@ -41,12 +41,16 @@
   }
 
   .cmp-tabs {
-    padding: 0 toRem(16);
     left: 0;
     margin: 0 auto;
+    padding: 0 toRem(16);
     position: absolute;
     right: 0;
     width: toRem(1224);
+
+    @include respond-to-max($tablet) {
+      width: 100%;
+    }
 
     @include respond-to-min($desktop) {
       padding: 0 toRem(32);
@@ -85,7 +89,7 @@
     }
 
     .cmp-text {
-      padding-top: toRem(51.2);
+      padding-top: toRem(68);
       position: relative;
 
       @include respond-to-min($desktop) {
